codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_provider_final_model_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  provider-final-model high                                                     "
