codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_weekly_limit_pacing_copy_variants.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 7571
expression: "[on_pace, over, under_rounded, stale, unavailable].join(\"\\n\")"
---
weekly 63% (on pace)
weekly 50% (over 10%)
weekly 53% (under 4%)
weekly 63% (stale)
weekly 80%
