codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_empty_then_non_empty_after.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Waiting · primitive: write_stdin(empty stdin poll) · just fix

↳ Interacted with background terminal · just fix
  └ ls
