codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_before_streamed_agent_message.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_completion_timestamps(& (combined))
---
• Waiting · primitive: write_stdin(empty stdin poll) · cargo test -p codex-core

• Streaming response.

  done [completion time]
